feat(benchmark): improve KVStore benchmark initialization + running